# aikeiba

./: .gitignore  README.md  app.js  index.html  script.js  style.css  styles.css
racing_ai/: .gitignore  README.md  cli.py  pyproject.toml
racing_ai/config/: normalization_maps.json  train_top3_split.yaml
racing_ai/docs/: keiba_ai_design_memo.md  model_dynamic_shadow_validation.md  model_meta_schema.md  one_click_prediction_pipeline_design.md
racing_ai/reports/: actual_wide_hit_consistency_audit_20260411_20260412.md  actual_wide_hit_consistency_audit_2026_spring.md  actual_wide_hit_consistency_audit_2026_spring_after_apply.md  actual_wide_hit_mismatch_rows_20260411_20260412.md  actual_wide_hit_mismatch_rows_2026_spring.md  actual_wide_hit_mismatch_rows_2026_spring_after_apply.md  backfill_results_finish_position_2024_apply.md  backfill_results_finish_position_2024_dryrun.md  backfill_results_finish_position_2025_apply.md  backfill_results_finish_position_2025_dryrun.md  backfill_results_finish_position_20260411_20260412_apply_mismatch.md  backfill_results_finish_position_20260411_20260412_dryrun_mismatch.md  backfill_results_finish_position_2026_spring_apply.md  backfill_results_finish_position_2026_spring_dryrun.md  backfill_results_finish_position_apply.md  backfill_results_finish_position_dryrun.md  backfill_results_finish_position_target_converted_apply.md  backfill_results_finish_position_target_converted_dryrun.md  backfill_results_payouts_plan.md  backfill_wide_payouts_2024_apply.md  backfill_wide_payouts_2024_dryrun.md  backfill_wide_payouts_2025_apply.md  (+179 more)
(+1890 files in other folders)
