[project]
name = "aikeiba"
version = "0.1.0"
description = "JRA-VAN DataLab based horse racing AI (JRA only)."
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.0.0",
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "pyarrow>=16.0.0",
  "lightgbm>=4.4.0",
  "scikit-learn>=1.5.0",
  "joblib>=1.4.0",
  "pydantic>=2.8.0",
  "typer>=0.12.0",
  "rich>=13.7.0",
]

[project.scripts]
aikeiba = "aikeiba.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
